Update main navigation, fix overflow issue

--- a/src/scss/components/header/_header.scss
+++ b/src/scss/components/header/_header.scss
@@ -29,12 +29,15 @@
       grid-template-columns: 310px 1fr;
       grid-template-areas: "lockup main-nav"
       "search-field search-field";
-      align-items: center;
-      padding-bottom: 0.6rem;
+      // align-items: center;
+      align-items: end;
+      // padding-bottom: 0.6rem;
+      padding-bottom: 0;
       max-width: $chemh-site-max-width;
 
       .su-lockup {
         grid-area: lockup;
+        margin-bottom: 3.4rem;
       }
 
       .su-multi-menu {
