--- a/src/scss/components/search/_search.scss
+++ b/src/scss/components/search/_search.scss
@@ -44,7 +44,7 @@
 @include grid-media-min('lg') {
   .menu-search-button {
     background: url("../../assets/svg/icon_search_black.svg") no-repeat 0 0;
-    align-self: center;
+    // align-self: center;
     padding: 1rem 1rem 1.15rem;
     height: 35px;
     width: 35px;
